Now displays CPU and MEM usage

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -33,7 +33,7 @@ window#waybar {
   color: #b4befe;
 }
 
-#clock, #backlight, #pulseaudio, #bluetooth, #network, #battery{
+#clock, #backlight, #pulseaudio, #bluetooth, #network, #battery, #cpu, #memory{
   border-radius: 10px;
   background-color: #11111b;
   color: #cdd6f4;
